[package]
authors = ["hoang.ong"]
edition = "2021"
name = "tssv3"
rust-version = "1.70"
version = "0.1.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "tssv3"

[features]
default = ["curv-kzen/rust-gmp-kzen"]
jni = []

[dependencies]
aead = "0.4.3"
aes-gcm = "0.9.4"
anyhow = "1.0.69"
async-sse = "5"
async-std = "1.12.0"
base64 = "0.21.0"
centipede = {version = "0.3", default-features = false}
chrono = "0.4.24"
criterion = "0.3"
#curv-kzen = {version = "0.9", default-features = false, features = ["num-bigint"]}
allo-isolate = "0.1.14"
curv-kzen = {version = "0.9", default-features = false}
derivative = "2"
futures = "0.3"
hex = "0.4"
rand = "0.8"
rand_xoshiro = "0.6.0"
round-based = {version = "0.1.4", features = []}
rustmodel = {path = "../rustmodel"}
secp256k1 = {version = "0.20", features = ["global-context"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.9"
structopt = "0.3"
subtle = {version = "2"}
surf = {version = "2", default-features = false, features = ["h1-client-rustls"]}
thiserror = "1.0.23"
tokio = {version = "1", default-features = false, features = ["macros"]}
uuid = {version = "0.8", features = ["v4"]}
zeroize = "1"
zk-paillier = {version = "0.4.3", default-features = false}
#Java JNI
jni = "0.17.0"
robusta_jni = "0.2.0"

[dev-dependencies]
ed25519-dalek = "1.0.1"
itertools = "0.10"
rand_xoshiro = "0.6.0"
round-based = {version = "0.1.4", features = ["dev"]}

[dependencies.paillier]
default-features = false
package = "kzen-paillier"
version = "0.4.2"
